2011-01-31 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* Started logging changes
