@@ -1,3 +1,12 @@
+2011-02-21 Wojciech Kocjan <zoro2@users.sourceforge.net>
+	* generic/pages.c: Cookfs index not updated if no changes to pages are made
+	* generic/pages.h:
+	* scripts/pages.tcl:
+	* scripts/writer.tcl:
+	* tests/vfs.test:
+	* tests/pages.test
+
+
 2011-01-31 Wojciech Kocjan <zoro2@users.sourceforge.net>
 	* Started logging changes
 
